# comp3320-project

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mingw  README.md
assets/: asset_list.txt  skybox.txt
cmake/modules/: FindGLFW.cmake
doc/background/: background.tex
doc/background/images/: adjust_color.sh  adjust_convert.py  convert_eps.py  convert_png.py  take_photo.py  trace.sh
doc/module1/: gantt.tex  module1.tex
doc/module2/: module2.tex  module2_gantt.tex
doc/proposal/: gantt.tex  proposal.tex
doc/report/: module1_gantt.tex  profiler_output.tex  proposal_gantt.tex  report.tex
src/: Camera.h  Model.cpp  Model.h  SceneModel.cpp  SceneModel.h  program.cpp
src/NUGL/: Buffer.h  Framebuffer.h  Renderbuffer.h  Shader.h  ShaderProgram.h  Texture.h  VertexArray.h
src/glsl/: alpha.frag  col_tex.frag  colour.frag  deferredShading.frag  deferredShading.vert  flat_reflect.frag  flat_reflect.vert  g-buffer.frag  g-buffer.vert  lit_rfl_tex.frag  pos2_tex.vert  pos_mvp.vert  reflect.frag  reflect.vert  reflect_tex.frag  reflect_tex.vert  screen.vert  shadow.frag  shadow.vert  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert  textured.frag  uniform.frag
src/scene/: Camera.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ProceduralAsteroid.cpp  ProceduralAsteroid.h  Scene.cpp  Scene.h
src/shaders/: fs_col_tex_tex.gl  fs_map.gl  fs_reflect.gl  fs_tex.gl  fs_uniform.gl  pos_col_tex_mvp.vert  pos_tex_mvp.vert  reflect.frag  reflect.vert  skybox.vert  vs_pos3_col_tex_mvp.gl  vs_pos_col_tex_trans.gl  vs_pos_map_mvp.gl  vs_pos_mvp.gl  vs_pos_tex_mvp.gl  vs_reflect.gl
src/util/: debug.h
src/utility/: AssimpDebug.h  FrameTimer.h  PostprocessingScreen.h  Profiler.h  debug.h  make_unique.h  strutil.h
src/utility/math/: coordinates.h
