CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(comp3320_project)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(VERSION_PATCH 0)

# Tell CMake where to find our CMake modules
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")

# Compiler settings
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -O0 -Wpedantic -Wextra -Wall -std=c++11" )

# Shared libraries
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(png++ REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
FIND_PACKAGE(assimp REQUIRED)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR} REQUIRED)
INCLUDE_DIRECTORIES(${libpng++_INCLUDE_DIRS} REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} REQUIRED)
# INCLUDE_DIRECTORIES(${assimp_INCLUDE_DIR} REQUIRED)

# ADD_SUBDIRECTORY(src/NUGL)

# Include directories
INCLUDE_DIRECTORIES("src/")

#FILE(GLOB_RECURSE inc_files
#    "util/**.h"
#    )

FILE(GLOB src_files
      "src/**.cpp" ,
    )

# Add Executables
SET(game_src ${inc_files} ${src_files})
ADD_EXECUTABLE (game ${game_src})
SET_TARGET_PROPERTIES(game PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(game
    ${OPENGL_gl_LIBRARY}
    ${GLEW_LIBRARY}
    ${GLFW_LIBRARIES}
    ${JPEG_LIBRARIES}
    ${PNG_LIBRARIES}
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
    ${ASSIMP_LIBRARIES}
    )
